setup blog and add first post

--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -79,8 +79,8 @@ img {
 // -------------- THEME SWITCHER -------------- //
 @mixin dark-appearance {
   html, body  {
-      --headings: #74c0fc;
-      --links: #91A7FF;
+      --headings: #74fc8b;
+      --links: #91ffd9;
       --highlight: #41C7C7;
       --bg: #1f242A;
       --bg-secondary: #323945;
